ncc/testsuite/negative/properties1.n
class A {
  public Prop : string {
    get { ""  }
    private set { ignore (value) }
  }

  public this () { Prop = "" }
}

class B {
  OnlyGet : int {
    get { 1 }
  }

  
  public this () {
    def x = A();
    OnlyGet = 4;        // E: read-only
  }

  goo () : void {
    def x = A();
    x.Prop = "#";        /// E: property accessor.* is inaccessible
  }
}
